# Mission-Control-AI

./: .env.example  .gitignore  0-The-Beginning.txt  1-Buildout.txt  2 PROPOSED DATABASE SCHEMA.txt  3 CLAUDE-DERIVED EXECUTION PRINCIPLES.txt  4 SPACESHIP ARCHITECTURE — API-FIRST AUTONOMOUS EXECUTION OS.txt  5 User Interface.txt  6-CLI interface.txt  7  MISSION CONTROL ENGINE (PROCESSING PLATFORM).txt  8 — PLATFORM HARDENING, GOVERNANCE & TESTING SPEC.txt  CLAUDE.md  MODEL STACK EXPANSION + ROUTING STR.txt  Mission-Control-Coding-Doc.md  pyproject.toml  requirements.txt  run.py
app/: main.py
app/api/: artifacts.py  backfill.py  codex.py  context.py  events_api.py  governance.py  health.py  instructions.py  metrics.py  models_api.py  planner_api.py  plans.py  rag.py  router_api.py  sql.py  system.py  tasks.py  telemetry.py  validate_api.py  websocket.py  workers.py
app/codex/: clustering.py  engine.py  promotion.py
app/core/: audit.py  (+8 more)
cli/: __init__.py  api_client.py  config.py  main.py  output.py
config/: models.example.json  models.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
knowledge/: INDEX.md  architecture-decisions.md  build-roadmap.md  integration-patterns.md  schema-decisions.md
tests/: test_adaptive_router.py  test_api_system.py  test_cli.py  test_e2e_task_execution.py  test_grading_engine.py  test_phase3.py  test_phase4.py  test_phase7_rag.py  test_phase8_hardening.py  test_phase9_atlas.py  test_planner.py  test_replay.py  test_retry.py  test_routing_report.py  test_validators.py  test_validators_telemetry_loop.py
(+107 files in other folders)
