[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-control"
version = "0.1.0"
description = "Mission Control — Adaptive AI Execution Framework CLI"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
mission-control = "cli.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
